# claude-session-monitor

./: .gitignore  README.md
backend/: Cargo.toml  com.claude.monitor.plist
backend/src/: api.rs  db.rs  main.rs  models.rs  ws.rs
hook/: claude-monitor-hook.sh  install-hook.sh
overlay/: Package.swift
overlay/Sources/ClaudeMonitor/: AppDelegate.swift  ColorExtension.swift  Models.swift  OverlayView.swift  OverlayWindowController.swift  SessionCardView.swift  SessionStore.swift  TerminalFocus.swift  WindowDragArea.swift  main.swift
overlay/Sources/ClaudeMonitorMain/: main.swift
overlay/Tests/ClaudeMonitorTests/: TerminalFocusTests.swift
scripts/: build-app.sh
test/: test-hooks.sh
tui/: focus.go  focus_test.go  go.mod  go.sum  install.sh  main.go  model.go  session.go
